Updated dependencies Updated outdated information

--- a/views/index.pug
+++ b/views/index.pug
@@ -52,7 +52,7 @@ block head
 
         let carouselValues = [
             "Full-stack developer",
-            "Hypixel Moderator",
+            // "Hypixel Moderator",
             "RPI Student",
             "Ultimate Cat-lover"
         ]
@@ -206,8 +206,8 @@ block content
                 div.left-text
                     h3 Karaoke Panel
                     p
-                        | I joined the Hypixel Karaoke team sometime in 2015. Not long after, I became a team leader
-                        | , taking on the role of furthering team resources and creating whatever content is needed
+                        | I joined the Hypixel Karaoke team sometime in 2015. Not long after, I became a team leader,
+                        | taking on the role of furthering team resources and creating whatever content is needed
                         | by the team.
 
                     p
@@ -233,8 +233,7 @@ block content
                         | minute of Watchdog's bans and store them in a database, for long-term tracking. I've used this
                         | data to create a website listing Watchdog's accomplishments.
 
-                    p
-                        a(href="https://bugg.co/watchdogger") Click here to visit it.
+                    p It has since gone offline, however I may bring it back sometime in the future.
                 div.right-image
                     img(src="images/watchdog.webp", onerror="imgLoadError(this)").screenshot
             //div#image-sharing.tab-content
@@ -284,10 +283,10 @@ block content
                         div.tl-img
                             img(src="images/hypixel.webp", onerror="imgLoadError(this)")
                         h3.tl-title Hypixel Volunteer
-                        h4.subtext June 2014 - Present
+                        h4.subtext June 2014 - January 2020
                         p I started volunteering for the Hypixel Minecraft Network in 2014 as a "JR Helper". Since then
-                            | I've climbed the ladder up to the highest volunteer position available, which I've held
-                            | for over four years.
+                            | I climbed the ladder up to the highest volunteer position available, which I held for over
+                            | 5 years before retiring in 2020.
                             br
                             a(href="https://hypixel.net/volunteer") Click here for more information.
                 div.tl-item
@@ -312,7 +311,7 @@ block content
                         h3.tl-title Rensselaer Polytechnic Institute
                         h4.subtext August 2018 - Present
                         p I started attending Rensselaer Polytechnic Institute in the 2018 Fall semester, located in
-                            | Troy, NY. I am currently studying Computer Science and plan on minoring in Philosophy.div.tl-item
+                            | Troy, NY. I am currently studying Computer Science and plan on minoring in Philosophy
 
         div#skills
             h2 Skills
