--- a/style.css
+++ b/style.css
@@ -11,13 +11,14 @@
 /* Dark mode */
 @media(prefers-color-scheme: dark) {
   :root {
+    --primary: #CB6CA5;
     --secondary: #c2bcbc;
     --title-color: #fff3f3;
     --paragraph-color: #fff9f9;
     --background-color: #262424;
   }
   a:hover {
-    filter: saturate(20%) brightness(200%);
+    filter: saturate(50%) brightness(150%);
   }
 }
 
@@ -122,12 +123,22 @@ hr {
   cursor: pointer;
   transition: color 0.3s, filter 0.3s, transform 0.3s;
 }
-.tabs button[active="true"] {
+.tabs button[data-active="true"] {
   color: var(--primary);
   filter: brightness(130%);
 }
 .tabs button:hover {
   transform: translateY(-0.25em);
+}
+.tab-content {
+  height: 0;
+  opacity: 0;
+  position: absolute;
+  transition: opacity 0.3s, height 0.3s;
+}
+.tab-content[aria-hidden="false"] {
+  height: inherit;
+  opacity: 1;
 }
 
 /* ----------------- */
