--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
   --title-color: #000000;
   --paragraph-color: #1a1616;
   --background-color: #faf9f9;
+  --input-color: #e7e3e3;
+  --input-border-color: #aaaaaa;
+  --input-text-color: #1a1616;
 }
 
 /* Dark mode */
@@ -16,9 +19,15 @@
     --title-color: #fff3f3;
     --paragraph-color: #fff9f9;
     --background-color: #262424;
+    --input-color: #3b3838;
+    --input-border-color: #696464;
+    --input-text-color: #ffffff;
   }
   a:hover {
     filter: saturate(50%) brightness(150%);
+  }
+  .tabs button[data-active="true"] {
+    filter: brightness(130%);
   }
 }
 
@@ -31,6 +40,9 @@
     --title-color: #000000;
     --paragraph-color: #000000;
     --background-color: #ffffff;
+    --input-color: #efefef;
+    --input-border-color: #232323;
+    --input-text-color: #000000;
   }
 }
 /* High contrast */
@@ -41,6 +53,9 @@
     --title-color: #ffffff;
     --paragraph-color: #ffffff;
     --background-color: #000000;
+    --input-color: #181818;
+    --input-border-color: #ececec;
+    --input-text-color: #ffffff;
   }
 }
 
@@ -51,7 +66,7 @@ body {
   color: var(--paragraph-color);
   background-color: var(--background-color);
 }
-h1,h2,h3,h4,h5,h6,.koulen, .tabs button {
+h1,h2,h3,h4,h5,h6,label,.koulen, .tabs button {
   font-family: 'Koulen', cursive;
 }
 p,.merriweather {
@@ -67,6 +82,14 @@ a:hover {
 hr {
   border-color: var(--primary);
   filter: brightness(80%);
+}
+button {
+  cursor: pointer;
+  border: 1px solid var(--input-border-color);
+  border-radius: 5px;
+  background-color: var(--input-color);
+  color: var(--input-text-color);
+  padding: 10px 15px;
 }
 
 /* ----------------- */
@@ -85,6 +108,10 @@ hr {
 }
 .row {
   display: flex;
+  width: 100%;
+}
+.card {
+  width: 100%;
 }
 
 /* ----------------- */
@@ -120,25 +147,54 @@ hr {
   font-size: 18px;
   margin: 5px;
   color: var(--secondary);
-  cursor: pointer;
   transition: color 0.3s, filter 0.3s, transform 0.3s;
 }
 .tabs button[data-active="true"] {
   color: var(--primary);
-  filter: brightness(130%);
 }
 .tabs button:hover {
   transform: translateY(-0.25em);
+}
+#tab-contents {
+  position: relative;
 }
 .tab-content {
   height: 0;
   opacity: 0;
   position: absolute;
   transition: opacity 0.3s, height 0.3s;
+  padding-bottom: 50px;
+  width: 100%;
 }
 .tab-content[aria-hidden="false"] {
   height: inherit;
   opacity: 1;
+}
+
+/* ----------------- */
+
+label {
+  font-size: 18px;
+}
+input, textarea {
+  border: 1px solid var(--input-border-color);
+  background-color: var(--input-color);
+  color: var(--input-text-color);
+  border-radius: 8px;
+  display: block;
+  padding: 12px;
+  width: calc(100% - 24px); /* 2 * padding (12px) */
+  margin-bottom: 15px;
+}
+#contact-body {
+  resize: none;
+  height: 150px;
+}
+.name-wrapper, .email-wrapper {
+  width: 45%;
+}
+.name-wrapper {
+  margin-right: 10%;
 }
 
 /* ----------------- */
@@ -175,6 +231,15 @@ hr {
   }
   .github {
     font-size: 0.75em;
+  }
+}
+
+@media(max-width: 500px) {
+  .row {
+    display: inherit;
+  }
+  .name-wrapper, .email-wrapper {
+    width: inherit;
   }
 }
 
