--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,8 @@
   --input-color: #e7e3e3;
   --input-border-color: #aaaaaa;
   --input-text-color: #1a1616;
+  --tech-background-color: #f6f3f3;
+  --tech-icon-color: #2f2e2e;
 }
 
 /* Dark mode */
@@ -22,7 +24,8 @@
     --input-color: #3b3838;
     --input-border-color: #696464;
     --input-text-color: #ffffff;
-    --footer-color: #3b3838
+    --tech-background-color: #1f1e1e;
+    --tech-icon-color: #c2b8b8;
   }
   a:hover {
     filter: saturate(50%) brightness(150%);
@@ -64,17 +67,6 @@ button {
   background-color: var(--input-color);
   color: var(--input-text-color);
   padding: 10px 15px;
-}
-footer {
-  display: flex;
-  flex-direction: column;
-  height: 100px;
-  margin-top: 30px;
-  justify-content: center;
-  background-color: var(--footer-color);
-}
-footer small {
-  align-self: center;
 }
 
 /* ----------------- */
