rename about me section to skills

--- a/styles/style.css
+++ b/styles/style.css
@@ -37,9 +37,11 @@
 
 /* ----------------- */
 
+html {
+  scroll-behavior: smooth;
+}
 body {
   margin: 0;
-  scroll-behavior: smooth;
   color: var(--paragraph-color);
   background-color: var(--background-color);
 }
