Add data validation to contact form

--- a/components/ContactMe/ContactMe.css
+++ b/components/ContactMe/ContactMe.css
@@ -12,7 +12,7 @@ input, textarea {
     width: calc(100% - 24px); /* 2 * padding (12px) */
     margin-bottom: 15px;
 }
-#contact-body {
+.contact-body {
     resize: none;
     height: 150px;
 }
