Add reCAPTCHA to contact form. This fixes #19

--- a/client/components/ContactMe/ContactMe.css
+++ b/client/components/ContactMe/ContactMe.css
@@ -22,6 +22,15 @@ input, textarea {
 .name-wrapper {
     margin-right: 10%;
 }
+.recaptcha-branding {
+    display: block;
+    margin-bottom: 15px;
+}
+/* Hide Google reCAPTCHA badge */
+/* https://developers.google.com/recaptcha/docs/faq */
+.grecaptcha-badge {
+    visibility: hidden;
+}
 
 @media(max-width: 500px) {
     .name-wrapper, .email-wrapper {
