--- a/client/components/RepeatingList/RepeatingList.css
+++ b/client/components/RepeatingList/RepeatingList.css
@@ -1,13 +1,14 @@
 repeating-list {
-    position: absolute;
-    display: flex;
-    overflow: hidden;
+  position: absolute;
+  display: flex;
+  overflow: hidden;
 }
-repeating-list:hover, repeating-list:active {
-    overflow: scroll;
+repeating-list:hover,
+repeating-list:active {
+  overflow: scroll;
 }
 @media (prefers-reduced-motion: reduce) {
-    repeating-list {
-        overflow: scroll;
-    }
+  repeating-list {
+    overflow: scroll;
+  }
 }
