--- a/client/components/ColorTrackHeader/ColorTrackHeader.css
+++ b/client/components/ColorTrackHeader/ColorTrackHeader.css
@@ -1,8 +1,7 @@
-
 color-track-header {
-    width: 100%;
-    height: 125px;
+  width: 100%;
+  height: 125px;
 }
 color-track-header > div {
-    overflow: hidden
+  overflow: hidden;
 }
